--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 </head>
 <body>
     <!-- Estas son algunas etiquetas en HTML -->
+    <!-- br:  Es un salto de linea-->
+    <!-- a: Esto es una etiqueta con atributo-->
+    <!--taget: nos abre el link en una pagina en blanco-->
+    <!--href: Aveces funciona sin ruta y a veces no -->
+
     <h1>Encabezado</h1>
     <h2>Encabezado 2</h2> 
-    <br> <!--Este es un salto de linea-->
+    <br>
     <p>Esto es un parrafo</p>
 
-   
+    <a href="https://www.w3schools.com/html/default.asp" target="_blank">Esto es un link</a>
+    <br>
+    <br>
+    <a href="tabla.html" target="blank"> Tablas</a>
+
     
 </body>
 </html>
