--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <br>
     <br>
     <a href="tabla.html" target="blank"> Tablas</a>
+    <br>
+    <br>
+    <a href="colores.html" target="blank"> Tabla colores</a>
 
-    
+
 </body>
 </html>
