imagenes en HTML

--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <a href="https://www.w3schools.com/html/default.asp" target="_blank">Esto es un link</a>
     <br>
     <br>
-    <a href="tabla.html" target="blank"> Tablas</a>
+    <a href="tabla.html" target="_blank"> Tablas</a>
     <br>
     <br>
-    <a href="colores.html" target="blank"> Tabla colores</a>
+    <a href="colores.html" target="_blank"> Tabla colores</a>
+    <br>
+    <br>
+    <a href="imagenes.html" target="_blank">Imagenes</a>
 
 
 </body>
