--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <br>
     <br>
     <a href="imagenes.html" target="_blank">Imagenes</a>
+    <br>
+    <br>
+    <a href="video.html" target="_blank"> Video</a>
 
 
 </body>
