--- a/video.html
+++ b/video.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Videos</title>
 </head>
 <body>
+    
+    <video src="./multimedia/video1.mp4" controls style="height: 600px; width: 900px;"> video </video>
+
     
 </body>
 </html>
