reto tabla colores

--- a/tabla.html
+++ b/tabla.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Tablas en HTML </title>
 </head>
-<body>
+<body >
     <!-- Tablas en HTML -->
     <!--Table: Es la etiqueta general de una tabla-->
     <!--tr: Etiqueta de una fila-->
     <!--th: Encabezados de una tabla-->
     <!--tbody: Es el cuerpo de la tabla-->
     <!--td: Campo normal de una tabla-->
+    <!--tambien en el border podemos usar border: tamaño en pixeles, el tipo y el color-->
 
-    <table border="3" align="center"  style="border-color: blue; font-size: 30px;">
-        <tr> 
+<div style="background-color: burlywood; height: 400px;;">
+    <h1 style="background-color: brown; font-size: 3em; color: darkslategrey; color: cornsilk; border-style: solid; border-color:lightseagreen; border-width: 5px; "> LISTADO DE PERSONAS </h1>
+    <table border="3" align="center"  style="border-color: blue; font-size: 30px; ">
+        <tr style="color:black;"> 
             <th>Nombre: </th> 
             <th> Apellido: </th>
             <th>Edad: </th>
         </tr>
- 
+
         <tbody>
             <tr>
                 <td>Ana</td>
@@ -36,6 +39,10 @@
         </tbody>
 
     </table>
+    
+    <h2 style="background-color: chocolate; text-align: right;"> 1-2-3-4-5 </h2>
+
+</div>
 
 </body>
 </html>
