--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <br>
     <br>
     <a href="video.html" target="_blank"> Video</a>
+    <br>
+    <br>
+    <a href="audio.html"> Audio </a>
+    <br>
+    <br>
+    <a href="graficos.html"> Graficos </a>
 
 
 </body>
