--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <br>
     <br>
     <a href="graficos.html"> Graficos </a>
+    <br>
+    <br>
+    <a href="formulario.html"> Formulario </a>
 
 
 </body>
