--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <br>
     <br>
     <a href="formulario.html"> Formulario </a>
+    <br>
+    <br>
+    <a href="formulario_select.html"> formulario con Select</a>
 
 
 </body>
