--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <br>
     <br>
     <a href="formulario_select.html"> formulario con Select</a>
+    <br>
+    <br>
+    <a href="checkbox_radiobutton.html"> Check box y Radio buttons</a>
 
 
 </body>
