primer estilo en CSS

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <br>
     <br>
     <a href="formulario_tarea.html"> Formulario de tarea</a>
+    <br>
+    <br>
+    <a href="estilo1.html" target="_blank"> Estilo 1</a>
     
     
 
