--- a/estilo1.html
+++ b/estilo1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilo 1</title>
+       
     <style>
         body{
             background-color: lightblue;
@@ -15,6 +16,14 @@
         p{
             font-family: Verdana;
             font-size: 20px;
+            background-image: -moz-linear-gradient(top, #F4Fa58, #FF0000);
+            background-color: #F4FA58;
+
+               /*  Para usar los prefijos de los navegadores se utiliza 
+                background-image y el navegador que utilizaremos
+                La etiqueta style se pone en el Head del archivo HTML
+              */
+            
         }
 
     </style>
