--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
     <a href="https://www.w3schools.com/html/default.asp" target="_blank">Esto es un link</a>
     <br>
     <br>
-    <a href="tabla.html" target="_blank"> Tablas</a>
+    <a href="/introduccion_web/views/html/tabla.html" target="_blank"> Tablas</a>
     <br>
     <br>
-    <a href="colores.html" target="_blank"> Tabla colores</a>
+    <a href="/introduccion_web/views/html/colores.html" target="_blank"> Tabla colores</a>
     <br>
     <br>
-    <a href="imagenes.html" target="_blank">Imagenes</a>
+    <a href="/introduccion_web/views/html/imagenes.html" target="_blank">Imagenes</a>
     <br>
     <br>
-    <a href="video.html" target="_blank"> Video</a>
+    <a href="/introduccion_web/views/html/video.html" target="_blank"> Video</a>
     <br>
     <br>
-    <a href="audio.html"> Audio </a>
+    <a href="/introduccion_web/views/html/audio.html" target="_blank"> Audio </a>
     <br>
     <br>
-    <a href="graficos.html"> Graficos </a>
+    <a href="/introduccion_web/views/html/graficos.html" target="_blank"> Graficos </a>
     <br>
     <br>
-    <a href="formulario.html"> Formulario </a>
+    <a href="/introduccion_web/views/html/formulario.html" target="_blank"> Formulario </a>
     <br>
     <br>
-    <a href="formulario_select.html"> formulario con Select</a>
+    <a href="/introduccion_web/views/html/formulario_select.html" target="_blank"> formulario con Select</a>
     <br>
     <br>
-    <a href="checkbox_radiobutton.html"> Check box y Radio buttons</a>
+    <a href="/introduccion_web/views/html/checkbox_radiobutton.html" target="_blank"> Check box y Radio buttons</a>
     <br>
     <br>
-    <a href="formulario_tarea.html"> Formulario de tarea</a>
+    <a href="/introduccion_web/views/html/formulario_tarea.html" target="_blank"> Formulario de tarea</a>
     <br>
     <br>
-    <a href="estilo1.html" target="_blank"> Estilo 1</a>
+    <a href="/introduccion_web/views/html_con_estilos/estilo1.html" target="_blank"> Estilo 1</a>
     
     
 
