--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <td style="vertical-align: text-top;">
                     <a href="/introduccion_web/views/html_con_estilos/estilo1.html" target="_blank"> Estilo 1</a>
                     <br>
+                    <a href="/introduccion_web/views/html_con_estilos/selectores_simples.html" target="_blank"> Selectores Simples </a>
 
                 </td>
             </tr>
