selector combinador decendiente

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </tr>
         <tbody>
             <tr>
+                <!--Columna HTML-->
                 <td style="vertical-align: text-top;">
                      <a href="/introduccion_web/views/html/tabla.html" target="_blank"> Tablas</a>
                      <br>
@@ -44,11 +45,13 @@
                      <a href="/introduccion_web/views/html/formulario_tarea.html" target="_blank"> Formulario de tarea</a>
                      <br>
                 </td>
+                <!--Columna CSS-->
                 <td style="vertical-align: text-top;">
                     <a href="/introduccion_web/views/html_con_estilos/estilo1.html" target="_blank"> Estilo 1</a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/selectores_simples.html" target="_blank"> Selectores Simples </a>
-
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/selectores_combinadores.html" target="_blank">Selectores combinadores </a>
                 </td>
             </tr>
 
