--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/selectores_simples.html" target="_blank"> Selectores Simples </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/selectores_combinadores.html" target="_blank">Selectores combinadores </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-clase.html" target="_blank"> Selecto pseudo-clase </a>
                 </td>
             </tr>
 
