selector pseudo-elemento

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/selectores_combinadores.html" target="_blank">Selectores combinadores </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-clase.html" target="_blank"> Selecto pseudo-clase </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-elemento.html" target="_blank"> Selector pseudo-elemento </a>
                 </td>
             </tr>
 
