--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-clase.html" target="_blank"> Selecto pseudo-clase </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-elemento.html" target="_blank"> Selector pseudo-elemento </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/selector_atributos.html" target="_blank"> Selector con atributos </a>
                 </td>
             </tr>
 
