asignacion de medidas

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/selector_pseudo-elemento.html" target="_blank"> Selector pseudo-elemento </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/selector_atributos.html" target="_blank"> Selector con atributos </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/medidas.html" target="_blank"> Medidas </a>
                 </td>
             </tr>
 
