--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/selector_atributos.html" target="_blank"> Selector con atributos </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/medidas.html" target="_blank"> Medidas </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/colores.html" target="_blank"> Colores </a>
                 </td>
             </tr>
 
