--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                     <a href="/introduccion_web/views/html_con_estilos/medidas.html" target="_blank"> Medidas </a>
                     <br>
                     <a href="/introduccion_web/views/html_con_estilos/colores.html" target="_blank"> Colores </a>
+                    <br>
+                    <a href="/introduccion_web/views/html_con_estilos/visibilidad.html" target="_blank"> Visibilidad </a>
                 </td>
             </tr>
 
